--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,38 +12,41 @@
     Selecione as opções abaixo para configurar sua senha e clique em "Gerar Senha".
   </p>
 
-  <!-- <form class="style-form" [formGroup]="passwordForm" (ngSubmit)="generatePassword()"> -->
+  <form class="style-form" [formGroup]="passwordForm" (ngSubmit)="generatePassword()">
     <ion-row class="style-itens">
       <ion-col class="ion-align-self-center col-label">
         <ion-label>Comprimento da senha</ion-label>
       </ion-col>
       <ion-col class="ion-align-self-center">
-        <ion-input type="numeric" [(ngModel)]="length"></ion-input>
+        <ion-input placeholder="digite um número" type="numeric" formControlName="length" ></ion-input>
+        <!-- <div *ngIf="passwordForm.get('length')?.errors">
+          Valor maior que 6
+        </div> -->
       </ion-col>
     </ion-row>
 
     <ion-item lines="none" class="style-itens">
       <ion-label>Incluir letras maiúsculas</ion-label>
-      <ion-checkbox [(ngModel)]="includeUpperCase"></ion-checkbox>
+      <ion-checkbox formControlName="includeUppercase"></ion-checkbox>
     </ion-item>
 
     <ion-item lines="none" class="style-itens">
       <ion-label>Incluir letras minúsculas</ion-label>
-      <ion-checkbox ></ion-checkbox>
+      <ion-checkbox formControlName="includeLowercase"></ion-checkbox>
     </ion-item>
 
     <ion-item lines="none" class="style-itens">
       <ion-label>Incluir números</ion-label>
-      <ion-checkbox [(ngModel)]="includeNumbers"></ion-checkbox>
+      <ion-checkbox formControlName="includeNumbers"></ion-checkbox>
     </ion-item>
 
     <ion-item lines="none">
       <ion-label>Incluir caracteres especiais</ion-label>
-      <ion-checkbox [(ngModel)]="includeSpecialCharacters"></ion-checkbox>
+      <ion-checkbox formControlName="includeSpecial"></ion-checkbox>
     </ion-item>
     
-    <ion-button expand="full" type="submit" (click)="generatePassword()">Gerar Senha</ion-button>
-  <!-- </form> -->
+    <ion-button [disabled]="!passwordForm.valid" expand="full" type="submit">Gerar Senha</ion-button>
+  </form>
 
 
   <ion-row class="style-itens" *ngIf="generatedPassword">
@@ -55,13 +58,18 @@
     </ion-col>
   </ion-row>
 
-  <!-- <ion-item *ngIf="generatedPassword">
-    <ion-label>Senha Gerada</ion-label>
-    <ion-input readonly [value]="generatedPassword"></ion-input>
-  </ion-item> -->
+
   <ion-list>
-    <ion-item *ngFor="let password of passwordHistory">
-      {{ password }}
-    </ion-item>
+    <p>Histórico de senhas geradas.</p>
+
+    <ion-row class="label-row">
+      <ion-col size="4">Senha</ion-col>
+      <ion-col size="4">Data</ion-col>
+    </ion-row>
+    <ion-row  *ngFor="let p of passwordHistory">
+      <ion-col size="4">{{p.password}}</ion-col>
+      <ion-col size="4">{{p.generatedAt | date:'dd/MM/yy HH:mm'}}</ion-col>
+    </ion-row>
+
   </ion-list>
 </ion-content>
