--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -23,7 +23,7 @@
 
 p{
   margin: 20px 0px 15px 15px;
-  font-size: 14px; 
+  font-size: 16px; 
   line-height: 19px; 
   color: #777F9A;
 }
@@ -36,4 +36,14 @@ p{
 }
 .col-label{
   margin-left: 10px;
+}
+
+ion-list{
+  padding: 10px;
+
+  font-size: 16px;
+
+  .label-row{
+    font-weight: 700;
+  }
 }
